Feat: AboutMe 페이지 info, timeline 기능구현

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,17 @@
   border: 3px solid var(--primary) ;
 }
 
+*::-ms-scrollbar {
+
+  display: none;
+  overflow: auto
+  }
+*::-webkit-scrollbar {
+
+  display: none;
+  overflow: auto
+  }
+
 @tailwind components;
 @tailwind utilities;
 
